		   you where in.
	      - You can now use decimals in the inventory program.
	      - Added missing tables for tts and fixed problems with postgresql.
	      - Fixed changing of password not getting set in session table
	      - email now displays "Could not open mailbox" if mailbox could
	        not be opened (formerly displayed just "mailbox empty")
	      - Fixed displaying of repeated events by owner

[09072000] - Added print icon that allows you to print out a page without having
	        the navbar. Thanks Sam Wynn Jr <sam.wynn@lmco.com>
	      - on group creation the files directory tried to be created in
	        "filemanager/groups/" instead of in "files/groups/" - fixed.
	        Same for the user directory.
	      - Added error checking for creating/editing an account with no permissions.
	      - Fixed a db->unlock() issue in editaccount.php
	      - Fixed a few $phpgw_flags out of place.
	      - Fixed a problem with attachments not handled properly
	      - Fixed email/folder.php
	      - Fixed a problem with link targeting and the navbar.
	      - Fixed kp3 not being passed properly in chat.
	      - Changed the icon for NNTP.
	      - Changed the way session->create() makes the random number. This should fix
	        the problems on NT.
	      - Added HTTP Proxy support to phpgw_network.
	      - Pop3: when a header line started with cc:, from:, ..., but
	        no information followed the colon, a bunch of error messages were
	        displayed ("xxx not an object"). Fixed.
	      - Inventory program now supports changeable status fields.
	      - Added feature to show minium in stock products in different colors.
	      - Added error checking for changing a group name to a name that already exsists
	      - Removed session->hidden_var(), use link() from now on.
	        NOTE: You need to make sure you use the POST method.  GET will cause problems.
	      - Cookie sessionid support works a little better now.