@@ -383,12 +383,19 @@ function month_name ( $m ) {
     $sql = "SELECT webcal_entry.cal_name, webcal_entry.cal_date, "
 	 . "webcal_entry_repeats.*, webcal_entry.cal_description, "
 	 . "webcal_entry.cal_time,webcal_entry.cal_priority, "
-	 . "webcal_entry.cal_duration "
-	 . "FROM webcal_entry, webcal_entry_repeats, webcal_entry_user "
+	 . "webcal_entry.cal_duration, webcal_entry_groups.groups "
+	 . "FROM webcal_entry, webcal_entry_repeats, webcal_entry_user, webcal_entry_groups "
 	 . "WHERE webcal_entry.cal_id = webcal_entry_repeats.cal_id "
 	 . "AND webcal_entry.cal_id = webcal_entry_user.cal_id "
-	 . "AND webcal_entry_user.cal_login = '" . $phpgw_info["user"]["userid"] . "' "
-	 . "AND webcal_entry.cal_type='M'";
+	 . "AND webcal_entry_groups.cal_id = webcal_entry.cal_id "
+	 . "AND (webcal_entry_user.cal_login = '" . $phpgw_info["user"]["userid"] . "' OR (webcal_entry.cal_access='group' AND (";
+    $group_names = $phpgw->accounts->read_group_names();
+    for ($i=0;$i<count($group_names);$i++) {
+      $sql .= "webcal_entry_groups.groups like '%".$group_names[$i][1]."%'";
+      if (count($group_names) != 0 && $i != count($group_names)-1)
+	$sql .= " OR ";
+    }
+    $sql .= "))) AND webcal_entry.cal_type='M'";
 
     $phpgw->db->query($sql);
 
